# proflame2-esp

./: .gitignore  README.md  proflame2_common.yaml  proflame2_fireplace.yaml  proflame2_fireplace_webflash.yaml  proflame2_tembed.yaml  proflame2_tembed_webflash.yaml
.github/workflows/: webflash.yml
components/proflame2/: __init__.py  manifest.json  proflame2_battery.cpp  proflame2_battery.h  proflame2_cc1101.cpp  proflame2_cc1101.h  proflame2_cc1101_regs.h  proflame2_climate.cpp  proflame2_climate.h  proflame2_decode.cpp  proflame2_decode.h  proflame2_entities.h  proflame2_learn.cpp  proflame2_rx.cpp  proflame2_ui.cpp  proflame2_ui.h  sensor.py
components/proflame2/test/: CMakeLists.txt  test_decode.cpp
docs/: climate.md  device-ui.md  entities.md  hardware.md  installation.md  pairing-esp32.md  pairing-sdr.md  pairing-tembed.md  pairing.md  protocol.md  troubleshooting.md  web-ui.md
web/: index.html  manifest-fireplace.json.tmpl  manifest-tembed.json.tmpl  style.css
